--- a/style.css
+++ b/style.css
@@ -1,78 +1,54 @@
 body{
     min-height: 100vh;
     font-family: arial, sans-serif;
-    background-color: #c7e6f8;
 }
 
 html{
     scroll-behavior: smooth;
-}
-
-header{
-    padding: 20px;
     background-color:#c7e6f8;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
 }
 
-header li{
-    color: black;
-    margin-block-end: 16px;
-}
+* {
+    box-sizing: border-box;
+  }
 
-header a {
-    color: black;
-    text-decoration: none;
-}
 
-nav{
-    color: black;
-    display: flex;
-    position: static;
-    text-align: center;
-    justify-content: space-around;
-    text-decoration: none;
-    gap: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+/*---------*/
+
+header{ 
+    background-color:#587897;
     padding: 10px;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    margin-top: 20px;
+    border-radius: 30px;
 }
 
-nav a {
-    text-decoration: none;
-    padding: 10px 15px;
-    scroll-behavior: smooth;
+header img{
+    width: 100px;
+    height: 100px;
+    display: flex;
+    margin-left: 10px;
+}
 
+nav a{
+    margin: 20px 15px;
+    text-decoration: none;
+    padding: 20px 20px;
+    color: aliceblue;
+    font-size: 20px;
+    font-family:Georgia, 'Times New Roman', Times, serif ;
 }
 
 nav a:hover{
-    background-color:#ce5ec3;
-    border-radius: 5px;
-}
-*/
-
-.nav-list{
-    display: flex;
-    list-style: none;
+    background-color:rgb(224, 94, 218);
+    color: black;
+    padding: 20px 20px;
+    border-radius:30px;
 }
 
-.nav-list li{
-    margin: 0 15px;
-}
-
-
-
-/* PALETA DE COLORES
-
-#c7e6f8
-#f6a9e3
-#0e4153
-#b478ae
-
-/*
+/*--------*/
 
 /* DISEÑOS DE SECCIONES */
 
@@ -80,10 +56,31 @@ nav a:hover{
 .presentacion{
     display: flex;
     align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color:#c7e6f8 ;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    background-color: aliceblue;
     padding: 20px;
     text-align: left;
+    margin-top: 20px;
+    border-radius: 30px;
+}
+
+.presentacion button{
+    display: flex;
+    cursor: pointer;
+    background-color: #ce5ec3;
+    color: aliceblue;
+    text-decoration: none;
+    border-radius: 20px;
+    padding: 20px 20px;
+    border: none;
+    font-size: 18px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+}
+
+.presentacion button:hover{
+    background-color:#97178d;
+    color:aliceblue;
+    transition: 0.2s;
 }
 
 /*TEXTO DE LA CLASE PRESENTACION*/
@@ -97,14 +94,62 @@ nav a:hover{
 
 .especiales{
     display: flex;
-    text-align: center;
+    align-items: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: aliceblue;
+    margin-top: 20px;
+    border-radius: 30px;
     padding: 20px;
+    text-align: left;
+    justify-content: center;
+    gap: 10px;
 }
+
+.carousel{
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    justify-content: center;
+    gap: 10px;
+}
+
+.carousel img{
+    min-width: 100%;
+    transition: transform 0.5s ease;
+}
+
+.especiales button{
+    background-color:rgb(104, 127, 161);
+    color:aliceblue;
+    height: 70px;
+    width: 80px;
+    margin-top: 200px;
+    border-radius: 15px;
+    cursor: pointer;
+    border: none;
+    font-size: 15px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 5px 5px;
+}
+
+.especiales button:hover{
+    background-color:black;
+    color: aliceblue;
+    transition: 0.1s;
+}
+
+.especiales img{
+   width: 100%;
+   height: 200px;
+   margin: auto;
+}
+
+
+/*----*/
 
 .favoritos{
     display: flex;
     text-align: center;
-    border: solid green 2px;
     padding: 20px;
 }
 
@@ -181,25 +226,11 @@ nav a:hover{
 
 /*DISEÑO DE BOTONES*/
 
-.boton_ordena{
-    display: inline-block;
-    padding: 10px 20px;
-    background-color:#b95cb0;
-    color: white;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 10px;
-    text-align: center;
-    font-size: 18px;
-}
 
 #scroll_arriba {
     background-color:#0e4153;
     color: #fff;
     padding: 10px 20px;
-    border: none;
     border-radius: 5px;
     cursor: pointer;
     position: fixed;
